@@ -1,0 +1,35 @@
+BasedOnStyle: LLVM
+IndentWidth: 4
+UseTab: Never
+BreakBeforeBraces: Custom
+BraceWrapping:
+  AfterClass:			true
+  AfterControlStatement:	false
+  AfterEnum:			true
+  AfterFunction:		true
+  AfterNamespace:		true
+  AfterObjCDeclaration:		false
+  AfterStruct:			false
+  AfterUnion:			false
+  BeforeCatch:			false
+  BeforeElse:			false
+  IndentBraces:			false
+  SplitEmptyFunction: false
+AllowShortIfStatementsOnASingleLine: false
+AllowShortBlocksOnASingleLine: true
+AllowShortFunctionsOnASingleLine: false
+IndentCaseLabels: false
+SpaceBeforeParens: ControlStatements
+SpacesBeforeTrailingComments: 1
+SpacesInCStyleCastParentheses: false
+SpacesInContainerLiterals: false
+PointerAlignment: Right
+ContinuationIndentWidth: 4
+AlignOperands: false
+IndentCaseLabels: true
+ConstructorInitializerAllOnOneLineOrOnePerLine: true
+AlwaysBreakTemplateDeclarations: true
+AccessModifierOffset: -4
+BreakStringLiterals: false
+SpaceBeforeInheritanceColon: false
+IncludeBlocks: Preserve
