@@ -1,0 +1,7 @@
+#!/bin/bash
+# SPDX-License-Identifier: BSD-2-Clause
+# Copyright (C) 2021 Intel Corporation.
+
+set -ex
+echo "Install clang-format"
+sudo apt install clang-format-10
